[metadata]
name = docker-repo-cp
version = 0.1
description = 'Copy Docker images between two repositories',
url = 'https://github.com/smassonnet/docker-repo-cp'

[options]
packages = find:
package_dir =
    =src
install_requires =
    docker
python_requires >= 3.7

[options.packages.find]
where = src
