[metadata]
name = docker-repo-cp
version = 0.1
description = 'Copy Docker images between two repositories',
url = 'https://github.com/smassonnet/docker-repo-cp'

[options]
install_requires =
    docker
python_requires >= 3.7

[options.entry_points]
console_scripts =
    docker-repo-cp = docker_repo_cp:cli
